--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 # Exclude Everything!!!
 
 /*
-build/
-run/
-.gradle/
 
 # Except the stuff i want to keep
 
 # Gradle Stuff
-!gradle/wrapper/
+!gradle/
 !build.gradle
 !build.properties
 !settings.gradle
@@ -18,11 +15,6 @@ run/
 
 # Other Important Files
 !LICENSE
-!README.md
-!Change Log.txt
-!VERSION.txt
-!curse_upload.json
 
 # Other Important Folders
 !src/
-src/generated/resources/.cache
